fixing map settings control layout bug, converting styles into reusable mixin and using them for the location selection button. better effect management for the dropped marker.

--- a/src/MapSettingsControl/styles.module.scss
+++ b/src/MapSettingsControl/styles.module.scss
@@ -1,45 +1,18 @@
 @import '../common/styles/buttons';
 
 .gearButton {
-  //@include imageButton('gear');
-  position: absolute;
+  @include mapboxControlButton;
   bottom: 1.25rem;
   left: .6rem;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px;
-  border: .5px solid rgba(0, 0, 0, 0.1);
-  z-index: 1;
-
-  button {
-    padding: 0;
-    height: 1.75rem;
-    width: 1.75rem;
-    background: #f9f9f9;
-    border-width: 0px 0px 1px;
-    opacity: .95;
-    text-align: center;
-    background-color: 249, 249, 249;
-    border-radius: 2px;
-    transition: background-color 0.16s ease-out 0s;
-    focus {outline:0;}
-  }
-
-  svg {
-    height: 1.25rem;
-    width: 1.25rem;
-    fill: #333;
-  }
-
-  &:focus {outline:0;}
+  position: absolute;
 }
+
 .mapSettings {
   position: absolute;
   background-color: #fff;
   z-index: 1;
-    ul {
-      margin-bottom: 0rem;
-    }
+
+  ul {
+    margin-bottom: 0rem;
+  }
 }
-
-
-
-
